<resources>
    <string name="app_name">Books</string>
    <string name="book_info">Book info</string>
    <string name="book_name">Name:</string>
    <string name="author">Author:</string>
    <string name="year">Year:</string>
    <string name="pages">Pages:</string>
    <string name="list">List of books</string>
    <string name="delete_book">Delete book</string>
    <string name="update_book">Update book</string>
    <string name="create_book">Create book</string>
</resources>