<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewBookActivity">

    <TextView
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/book_info"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/bookNameLabel"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/book_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <EditText
        android:id="@+id/bookNameField"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:hint="@string/book_name"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toEndOf="@+id/bookNameLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/bookAuthorLabel"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/author"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <EditText
        android:id="@+id/bookAuthorField"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:hint="@string/author"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toEndOf="@+id/bookNameLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <TextView
        android:id="@+id/bookPagesLabel"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/pages"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <EditText
        android:id="@+id/bookPagesField"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:hint="@string/pages"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toEndOf="@+id/bookNameLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/bookYearLabel"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/year"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312" />

    <EditText
        android:id="@+id/bookYearField"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:hint="@string/year"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toEndOf="@+id/bookNameLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="400dp"
        android:layout_height="54dp"
        android:background="#4CAF50"
        android:text="@string/create_book"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />


</androidx.constraintlayout.widget.ConstraintLayout>